update search lyric functionality

--- a/user_interface/UI.ipynb
+++ b/user_interface/UI.ipynb
@@ -16,9 +16,9 @@
     "import tkinter.messagebox\n",
     "from tkinter import ttk\n",
     "import tkinterweb\n",
-    "from tkinterhtml import HtmlFrame\n",
+    "#from tkinterhtml import HtmlFrame\n",
     "import tkinterweb\n",
-    "from IPython.display import Audio\n",
+    "#from IPython.display import Audio\n",
     "from urllib.request import urlopen"
    ]
   },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,6 +232,7 @@
     "    global track_df\n",
     "    global track_to_rate\n",
     "    global like_dislike_counter\n",
+    "    global lyric_entered\n",
     "    \n",
     "    sample_song_label.config(text=\"\")\n",
     "    #Once 10 songs have been rated, disable most buttons and allow user to view playlist\n",
@@ -242,6 +243,12 @@
     "        b_neutral[\"state\"] = DISABLED\n",
     "        b_listen[\"state\"] = DISABLED\n",
     "        b_playlist[\"state\"] = NORMAL\n",
+    "    elif lyric_entered == 0:\n",
+    "        label.config(text=\"Track: \\nArtist: \") #, font=(\"Arial\",12))\n",
+    "        b_like[\"state\"] = DISABLED\n",
+    "        b_dislike[\"state\"] = DISABLED\n",
+    "        b_neutral[\"state\"] = DISABLED\n",
+    "        b_listen[\"state\"] = DISABLED\n",
     "    else:\n",
     "        #display a random track for now\n",
     "        track_to_rate = track_df.sample(n=1,replace=True) \n",
@@ -267,29 +274,6 @@
     "    tracker_label = Label(frame1, text = 'Tracks Rated: ' + str(\"{0:0=2d}\".format(like_dislike_counter)) + \"/10\")\n",
     "    tracker_label.grid(row=2, column=0, sticky=\"nw\", padx=5, pady = 10)\n",
     "  \n",
-    "# Old version of tracking likes and dislikes\n",
-    "'''\n",
-    "def view_likes_dislikes():\n",
-    "    global data\n",
-    "    global root\n",
-    "    \n",
-    "    if not data:\n",
-    "        total_rows = 0\n",
-    "        total_columns = 1\n",
-    "    else:\n",
-    "        total_rows = len(data)\n",
-    "        total_columns = 1 #len(data[0])\n",
-    "\n",
-    "    for i in range(total_rows):\n",
-    "        if data[i][2] == \"Like\":\n",
-    "            e = Entry(frame2, width=30, fg='green')\n",
-    "            e.grid(row=i, column=1, padx=5, pady=5)\n",
-    "            e.insert(END, data[i][1])\n",
-    "        else:\n",
-    "            e = Entry(frame2, width=30, fg='red')\n",
-    "            e.grid(row=i, column=1, padx=5, pady=5)\n",
-    "            e.insert(END, data[i][1])\n",
-    "'''\n",
     " \n",
     "# Action for clicking like button: add to table at bottom of frame\n",
     "def like():  \n",
@@ -383,6 +367,11 @@
     "    global listBox_lyrics\n",
     "    global listBox_playlist\n",
     "    global like_dislike_counter\n",
+    "    global lyric_entered\n",
+    "    global lyricBox\n",
+    "    \n",
+    "    #set flag back to 0 that no lyric has been entered yet\n",
+    "    lyric_entered = 0\n",
     "    \n",
     "    # set counter back to 0 \n",
     "    like_dislike_counter  = -1\n",
@@ -390,7 +379,7 @@
     "    \n",
     "    # Reset buttons\n",
     "    b_playlist[\"state\"] = DISABLED\n",
-    "    b_startover[\"state\"] = DISABLED\n",
+    "    #b_startover[\"state\"] = DISABLED\n",
     "    b_export_playlist[\"state\"] = DISABLED\n",
     "    \n",
     "    # Remove lyric\n",
@@ -407,10 +396,12 @@
     "    # Reset table that displays liked / disliked lyrics\n",
     "    for item in listBox_lyrics.get_children():\n",
     "        listBox_lyrics.delete(item)\n",
-    "    \n",
     "    listBox_lyrics.grid(row=1, column=0, sticky=\"ew\")\n",
-    "    #listBox_lyrics.pack(side=\"left\", fill=BOTH, padx=5, pady=5)\n",
+    "    \n",
+    "    #reset lyric search functionality (set button back to normal and clear text box)\n",
     "    lyricSearch[\"state\"] = NORMAL\n",
+    "    #lyricBox.delete(\"1.0\",\"end\")\n",
+    "    \n",
     "    reset()\n",
     "    \n",
     "def export_to_spotify():\n",
@@ -427,31 +418,40 @@
     "\n",
     "#Action for submitting lyric in search box\n",
     "def lyric_processing():\n",
+    "    global lyric_entered\n",
+    "    #save lyric entry into string called lyricText\n",
     "    lyricText=lyricBox.get(\"1.0\",\"end-1c\")\n",
+    "    #disable submit button\n",
     "    lyricSearch[\"state\"] = DISABLED\n",
-    "    print(lyricText)     \n",
+    "    #print(lyricText)    \n",
+    "    lyric_entered = 1\n",
     "    reset()\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test\n"
+      "Type lyric here and click submit\n",
+      "hello\n"
      ]
     }
    ],
    "source": [
     "# global variables\n",
     "# start with random lyric\n",
-    "track_to_rate = track_df.sample(n=1,replace=True) #.track_id.astype('str').item()\n",
+    "#track_to_rate = track_df.sample(n=1,replace=True)\n",
+    "\n",
+    "#counter for the number of tracks that have been rated\n",
     "like_dislike_counter = 0\n",
+    "#set flag at 0 (no lyric has been entered yet)\n",
+    "lyric_entered = 0\n",
     "\n",
     "# song lyric display\n",
     "# creating tkinter window\n",
@@ -482,9 +482,6 @@
     "\n",
     "# Display buttons to view playlist, start over, export playlist to spotify\n",
     "frame3.grid(row=5, column=0, sticky=\"ew\")\n",
-    "#frame3.grid_columnconfigure((0,1,2,3), weight=1, uniform=\"column\")\n",
-    "#frame3.grid_columnconfigure((0,1,2,3), weight=1, uniform=\"column\")\n",
-    "\n",
     "\n",
     "# Add label to be used for displaying lyric\n",
     "#label = Label(frame1, text = 'Track: ' + track_to_rate.track_name_x.astype('str').item() + '\\n' + 'Artist: ' + track_to_rate.artist_name_x.astype('str').item(), anchor='w', justify=LEFT) #, font=(\"Arial\",12))\n",
@@ -527,6 +524,7 @@
     "#Add search bar\n",
     "lyricBox = Text(frame0, height=2, width=32)\n",
     "lyricBox.grid(row=0, column=1, pady=5)\n",
+    "lyricBox.insert(1.0, 'Type lyric here and click submit')\n",
     "\n",
     "lyricSearch = Button(frame0, text = 'Submit', command=lyric_processing)\n",
     "lyricSearch.grid(row=0, column=2, sticky=\"ew\", padx=3, pady=5)\n",
@@ -635,11 +633,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "#mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from platform import python_version\n",
+    "#print(python_version())"
    ]
   },
   {
