Productionize the rocchio feedback functions

--- a/search_functionality/development.ipynb
+++ b/search_functionality/development.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 84502/84502 [00:00<00:00, 555882.08it/s]\n"
+      "100%|██████████| 84502/84502 [00:00<00:00, 534369.64it/s]\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -567,31 +567,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(75976, 3)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_df.shape\n",
-    "track_artist_id_df = test_df[['track_name', 'artist_name', 'track_id']]\n",
-    "track_artist_id_df.to_csv('track_artist_id_df')"
+    "track_artist_id_df = test_df[['track_name', 'artist_name', 'track_id']].drop_duplicates()\n",
+    "track_artist_id_df.to_csv('track_artist_id_df', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_lsi_dict_pickle(track_vec_dict):\n",
+    "    pickle.dump(track_vec_dict, open('lsi_vec_dict.p', 'wb'))\n",
+    "def create_lsi_obj_pickle(lsiObj):\n",
+    "    pickle.dump(lsiObj, open('lsi_obj.p', 'wb'))\n",
+    "def create_tfidf_obj_pickle(tfidf):\n",
+    "    pickle.dump(tfidf, open('tfidf_obj.p', 'wb'))\n",
+    "def load_lsi_pickle():\n",
+    "    \"\"\" \n",
+    "    read in the pickle file containing the fitted\n",
+    "    LSI object\n",
+    "    \"\"\"\n",
+    "    with open('lsi_obj.p', 'rb') as lsi_file:\n",
+    "        lsiObj = pickle.load(lsi_file)\n",
+    "        return lsiObj\n",
+    "def load_tfidf_pickle():\n",
+    "    \"\"\" \n",
+    "    read in the pickle file containing the fitted\n",
+    "    TFIDF object\n",
+    "    \"\"\"\n",
+    "    with open('tfidf_obj.p', 'rb') as tfidf_file:\n",
+    "        tfidf = pickle.load(tfidf_file)\n",
+    "        return tfidf\n",
+    "def load_lsi_dict_pickle():\n",
+    "    \"\"\" \n",
+    "    read in the pickle file containing the fitted\n",
+    "    TFIDF object\n",
+    "    \"\"\"\n",
+    "    with open('lsi_vec_dict.p', 'rb') as tfidf_file:\n",
+    "        tfidf = pickle.load(tfidf_file)\n",
+    "        return tfidf\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_lsi_dict_pickle(track_vec_dict)\n",
+    "create_lsi_obj_pickle(lsiObj)\n",
+    "create_tfidf_obj_pickle(tfidf)\n"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "5edc29c2ed010d6458d71a83433b383a96a8cbd3efe8531bc90c4b8a5b8bcec9"
-  },
   "kernelspec": {
    "display_name": "Python 3.8.2 64-bit",
    "language": "python",
@@ -609,7 +644,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.2"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
