create custom classes for simple integration

--- a/search_functionality/production.ipynb
+++ b/search_functionality/production.ipynb
@@ -124,7 +124,7 @@
     "    userLsi = lsiObj.transform(userVec)\n",
     "    return userLsi\n",
     "\n",
-    "def retreive_10_tracks(lyric_df, userLsi, lyric_vecs):\n",
+    "def retrieve_10_tracks(lyric_df, userLsi, lyric_vecs):\n",
     "    \"\"\" \n",
     "    calculate cosine similarity between lyrics and user query\n",
     "    return the top 10 in a dataframe.\n",
@@ -212,13 +212,13 @@
     "# convert a user string query into the concept space\n",
     "userLsi = lsi_on_query(lsiObj, user_query, tfidf)\n",
     "# create a user playlist and return a dataframe\n",
-    "user_playlist = retreive_10_tracks(lyric_df, userLsi, lyric_vecs)\n",
+    "user_playlist = retrieve_10_tracks(lyric_df, userLsi, lyric_vecs)\n",
     "# simulate user input while we are not connected to the GUI\n",
     "user_playlist = simulate_user_input(user_playlist)\n",
     "# Apply rocchio feedback filter to generate a better query\n",
     "rocchioSearch = rocchio_feedback(1.0, 0.75, 0.25, 0.5, user_playlist, track_vec_dict, userLsi)\n",
     "# generate a new user playlist with the updated search\n",
-    "user_playlist = retreive_10_tracks(lyric_df, rocchioSearch, lyric_vecs)"
+    "user_playlist = retrieve_10_tracks(lyric_df, rocchioSearch, lyric_vecs)"
    ]
   },
   {
@@ -283,13 +283,221 @@
     "# convert a user string query into the concept space\n",
     "userLsi = lsi_on_query(lsiObj, user_query, tfidf)\n",
     "# create a user playlist and return a dataframe\n",
-    "user_playlist = retreive_10_tracks(lyric_df, userLsi, lyric_vecs)\n",
+    "user_playlist = retrieve_10_tracks(lyric_df, userLsi, lyric_vecs)\n",
     "# simulate user input while we are not connected to the GUI\n",
     "user_playlist = simulate_user_input(user_playlist)\n",
     "# Apply rocchio feedback filter to generate a better query\n",
     "rocchioSearch = rocchio_feedback(1.0, 0.75, 0.25, 0.5, user_playlist, track_vec_dict, userLsi)\n",
     "# generate a new user playlist with the updated search\n",
-    "user_playlist = retreive_10_tracks(lyric_df, rocchioSearch, lyric_vecs)"
+    "user_playlist = retrieve_10_tracks(lyric_df, rocchioSearch, lyric_vecs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Napster2_Rocchio_Feedback():\n",
+    "    \"\"\" \n",
+    "    Object for containing all relevant Rocchio Search functionality\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.query = None\n",
+    "        self.user_playlist = None\n",
+    "        self.main_path = self.base_path()\n",
+    "        self.lyric_vec_dict = self.load_lsi_dict_pickle()\n",
+    "        self.lyric_vecs = np.array(list(self.lyric_vec_dict.values()))\n",
+    "        self.lsiObj = self.load_lsi_pickle()\n",
+    "        self.tfidf = self.load_tfidf_pickle()\n",
+    "        self.all_tracks_df = pd.read_csv(self.main_path+'track_artist_id_df')\n",
+    "    \n",
+    "    def base_path(self):\n",
+    "            temp_path = os.getcwd()\n",
+    "            root_path = temp_path.split('/napster_2')[0]\n",
+    "            repo_path = '/napster_2/search_functionality/'\n",
+    "            return root_path + repo_path\n",
+    "\n",
+    "    def userSearch(self, user_query):\n",
+    "        \"\"\" \n",
+    "        Transform the user search string into the concept space\n",
+    "        \"\"\"\n",
+    "        userVec = self.tfidf.transform([user_query])\n",
+    "        # convert query vec into the concept space\n",
+    "        userLsi = self.lsiObj.transform(userVec)\n",
+    "        self.query = userLsi\n",
+    "\n",
+    "    def load_lsi_pickle(self):\n",
+    "        \"\"\" \n",
+    "        read in the pickle file containing the fitted\n",
+    "        LSI object\n",
+    "        \"\"\"\n",
+    "        temp_path = self.main_path + 'lsi_obj.p'\n",
+    "        with open(temp_path, 'rb') as lsi_file:\n",
+    "            lsiObj = pickle.load(lsi_file)\n",
+    "            lsi_file.close()\n",
+    "            return lsiObj\n",
+    "    def load_tfidf_pickle(self):\n",
+    "        \"\"\" \n",
+    "        read in the pickle file containing the fitted\n",
+    "        TFIDF object\n",
+    "        \"\"\"\n",
+    "        temp_path = self.main_path + 'tfidf_obj.p'\n",
+    "        with open(temp_path, 'rb') as tfidf_file:\n",
+    "            tfidf = pickle.load(tfidf_file)\n",
+    "            tfidf_file.close()\n",
+    "            return tfidf\n",
+    "    def load_lsi_dict_pickle(self):\n",
+    "        \"\"\" \n",
+    "        read in the pickle file containing the fitted\n",
+    "        TFIDF object\n",
+    "        \"\"\"\n",
+    "        temp_path = self.main_path +'lsi_vec_dict.p' \n",
+    "        with open(temp_path, 'rb') as lyric_file:\n",
+    "            lryicVecs = pickle.load(lyric_file)\n",
+    "            lyric_file.close()\n",
+    "            return lryicVecs\n",
+    "\n",
+    "    def create_user_playlist(self): #lyric_df, userLsi, lyric_vecs):\n",
+    "        \"\"\" \n",
+    "        calculate cosine similarity between lyrics and user query\n",
+    "        return the top 10 in a dataframe.\n",
+    "        \"\"\"\n",
+    "        # calculate cosine similarity between every track and the lyric provided.\n",
+    "        simVals = cosine_similarity(self.lyric_vecs, self.query)\n",
+    "        # create a track name, track id, artist name, similarity dataframe\n",
+    "        # need to make this a copy so that we do not modify the already stored data\n",
+    "        self.all_tracks_df['similarity'] = simVals\n",
+    "        self.user_playlist = lyric_df.sort_values(by='similarity', ascending=False).head(10)[['track_name', 'artist_name', 'track_id']]\n",
+    "        self.user_playlist['feedback'] = 0\n",
+    "\n",
+    "    def return_top_10_tracks(self):\n",
+    "        \"\"\" \n",
+    "        return the top 10 tracks based on cosine similarity\n",
+    "        \"\"\"\n",
+    "        return self.user_playlist\n",
+    "\n",
+    "    def apply_feedback(self, feedback_series):\n",
+    "        \"\"\" \n",
+    "        User input assign 0,1,2 to user feedback\n",
+    "        0 = nuetral\n",
+    "        1 = dislike\n",
+    "        2 = love\n",
+    "        \"\"\"\n",
+    "        self.user_playlist['feedback'] = feedback_series\n",
+    "\n",
+    "    def rocchio_feedback(self, alpha=1.0, beta=0.75, gamma=0.25, phi=0.5):#, user_playlist, track_vec_dict, userLsi):\n",
+    "        \"\"\" \n",
+    "        Rochhio Feedback Filtering\n",
+    "        1. Group user feeback by love, nuetral, dislike\n",
+    "        2. Calculate the mean for each group\n",
+    "        3. Apply alpha, beta, gamma, and phi to:\n",
+    "            Original search, loves, hates, nuetral\n",
+    "        4. Update the lyric search querry vector and return new results!\n",
+    "        return an updated query vector to improve search results\n",
+    "        \"\"\"\n",
+    "        # create a mean vector dict for all 3 states\n",
+    "        meanVectDict = defaultdict(list)\n",
+    "        # iterate through the three states nuetral[0], dislike[1], love[2]\n",
+    "        for i in range(3):\n",
+    "            temp_tracks = self.user_playlist[self.user_playlist['feedback']==i]\n",
+    "            if len(temp_tracks) > 0:\n",
+    "                # this means that tracks with this sentiment exist.\n",
+    "                # we can go get the track vectors from the track_vec_dict\n",
+    "                tempVecs = [self.lyric_vec_dict[vec] for vec in temp_tracks['track_id']]\n",
+    "                # next we need to calculate the mean vector for this segment\n",
+    "                meanVec = np.mean(tempVecs, axis=0)\n",
+    "                # add this mean to the mean vect dict. The key is the state.\n",
+    "                meanVectDict[i] = meanVec\n",
+    "            else:\n",
+    "                # if there are no tracks in this state, set its mean to 0\n",
+    "                meanVectDict[i] = 0\n",
+    "        # calcualte the new query vector by summing all of the mean vectors together\n",
+    "        newQueryVec = alpha*self.query + beta * meanVectDict[2] - gamma * meanVectDict[1] + phi * meanVectDict[0]\n",
+    "        self.query = newQueryVec\n",
+    "        # update the search after making a new query vector\n",
+    "        self.create_user_playlist()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myRFF = Napster2_Rocchio_Feedback()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myRFF.userSearch('Jealousy, turning saints into the sea')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>feedback</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>69605</th>\n",
+       "      <td>On Your Own</td>\n",
+       "      <td>Meltt</td>\n",
+       "      <td>1jUp1Yu76G1mXzr224YKHb</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        track_name artist_name                track_id  feedback\n",
+       "69605  On Your Own       Meltt  1jUp1Yu76G1mXzr224YKHb         0"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myRFF.create_user_playlist()\n",
+    "myRFF.apply_feedback([1,2,1,2,1,2,0,1,1,0])\n",
+    "myRFF.user_playlist\n",
+    "myRFF.rocchio_feedback()\n",
+    "pd.DataFrame(myRFF.return_top_10_tracks().iloc[[0]])\n"
    ]
   }
  ],
