added keep rating button

--- a/user_interface/UI.ipynb
+++ b/user_interface/UI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "449   3bmYpOfK6nLgr4GAtujhB8       Trenches      Pop Evil"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "(30, 3)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,6 +235,7 @@
     "    global lyric_entered\n",
     "    \n",
     "    sample_song_label.config(text=\"\")\n",
+    "    \n",
     "    #Once 10 songs have been rated, disable most buttons and allow user to view playlist\n",
     "    if like_dislike_counter == 10:\n",
     "        label.config(text=\"Track: \\nArtist: \") #, font=(\"Arial\",12))\n",
@@ -283,7 +284,10 @@
     "    like_dislike_count()\n",
     "    listBox_lyrics.insert(\"\", \"end\", values=(track_to_rate.track_name_x.astype('str').item(), track_to_rate.artist_name_x.astype('str').item(), \"Like\")) \n",
     "    reset()\n",
-    "        \n",
+    "    \n",
+    "    #test out print of values in table that show likes/dislikes\n",
+    "    for child in listBox_lyrics.get_children():\n",
+    "        print(listBox_lyrics.item(child)[\"values\"])\n",
     "    \n",
     "# Action for clicking Dislike button: add to table at bottom of frame  \n",
     "def dislike():  \n",
@@ -339,6 +343,17 @@
     "    for i in listBox_lyrics.selection():\n",
     "        listBox_lyrics.selection_remove(i)\n",
     "    \n",
+    "def keep_rating():\n",
+    "    global lyricText\n",
+    "    global lyric_entered\n",
+    "    start_over()\n",
+    "    lyric_entered = 1 \n",
+    "    reset()\n",
+    "    lyricSearch[\"state\"] = DISABLED\n",
+    "    lyricBox[\"state\"] = DISABLED\n",
+    "    # do something with lyricText that was entered already\n",
+    "    print(\"something\")\n",
+    "    \n",
     "# Once enough songs are rated, the view playlist option displays and displays at bottom of frame\n",
     "def view_playlist():\n",
     "    # create table to show lyrics with rating\n",
@@ -359,6 +374,7 @@
     "    for index, row in track_df.iterrows():\n",
     "        listBox_playlist.insert(\"\", \"end\", values=(row.track_name_x, row.artist_name_x))\n",
     "    \n",
+    "    b_keeprating[\"state\"] = NORMAL\n",
     "    b_playlist[\"state\"] = DISABLED\n",
     "    b_export_playlist[\"state\"] = NORMAL\n",
     "    \n",
@@ -378,6 +394,7 @@
     "    like_dislike_count()\n",
     "    \n",
     "    # Reset buttons\n",
+    "    b_keeprating[\"state\"] = DISABLED\n",
     "    b_playlist[\"state\"] = DISABLED\n",
     "    #b_startover[\"state\"] = DISABLED\n",
     "    b_export_playlist[\"state\"] = DISABLED\n",
@@ -400,7 +417,7 @@
     "    \n",
     "    #reset lyric search functionality (set button back to normal and clear text box)\n",
     "    lyricSearch[\"state\"] = NORMAL\n",
-    "    #lyricBox.delete(\"1.0\",\"end\")\n",
+    "    lyricBox[\"state\"] = NORMAL\n",
     "    \n",
     "    reset()\n",
     "    \n",
@@ -421,8 +438,9 @@
     "    global lyric_entered\n",
     "    #save lyric entry into string called lyricText\n",
     "    lyricText=lyricBox.get(\"1.0\",\"end-1c\")\n",
-    "    #disable submit button\n",
+    "    #disable submit button and text entry\n",
     "    lyricSearch[\"state\"] = DISABLED\n",
+    "    lyricBox[\"state\"] = DISABLED\n",
     "    #print(lyricText)    \n",
     "    lyric_entered = 1\n",
     "    reset()\n",
@@ -431,15 +449,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Type lyric here and click submit\n",
-      "hello\n"
+      "['Sueña', 'Intocable', 'Dislike']\n",
+      "['Goldberg Variations, BWV 988: Variatio 6 Canone alla Seconda. a 1 Clav.', 'Johann Sebastian Bach', 'Dislike']\n",
+      "['On & On', 'Cartoon', 'Like']\n",
+      "['Sueña', 'Intocable', 'Dislike']\n",
+      "['Goldberg Variations, BWV 988: Variatio 6 Canone alla Seconda. a 1 Clav.', 'Johann Sebastian Bach', 'Dislike']\n",
+      "['On & On', 'Cartoon', 'Like']\n",
+      "['Ruta 66', 'Pappo', 'Dislike']\n",
+      "['Trenches', 'Pop Evil', 'Like']\n"
      ]
     }
    ],
@@ -551,16 +575,20 @@
     "sample_song_label.grid(row=1, column=1, sticky=\"nw\", padx=5, pady = 10, columnspan=3)\n",
     "\n",
     "# Start over button to get back to original screen\n",
-    "b_startover = Button(frame3, text = '        Start Over        ', command=start_over)\n",
+    "b_startover = Button(frame3, text = 'Start Over', command=start_over)\n",
     "b_startover.grid(row=1, column=0, sticky=\"ew\", padx=3, pady=5)\n",
     "\n",
+    "# Keep rating button\n",
+    "b_keeprating = Button(frame3, text = 'Keep Rating', command=keep_rating)\n",
+    "b_keeprating.grid(row=1, column=1, sticky=\"ew\", padx=3, pady=5)\n",
+    "\n",
     "# View playlist once 10 lyrics rated\n",
-    "b_playlist = Button(frame3, text = '       View Playlist       ', command=view_playlist)\n",
-    "b_playlist.grid(row=1, column=1, sticky=\"ew\", padx=3, pady=5)\n",
+    "b_playlist = Button(frame3, text = 'View Playlist', command=view_playlist)\n",
+    "b_playlist.grid(row=1, column=2, sticky=\"ew\", padx=3, pady=5)\n",
     "\n",
     "# Export playlist to Spotify\n",
     "b_export_playlist = Button(frame3, text = 'Add to Spotify Queue', command=export_to_spotify)\n",
-    "b_export_playlist.grid(row=1, column=2, sticky=\"ew\", padx=3, pady=5)\n",
+    "b_export_playlist.grid(row=1, column=3, sticky=\"ew\", padx=3, pady=5)\n",
     "\n",
     "# Store selection for likes and dislikes\n",
     "#data = []    \n",
@@ -570,6 +598,7 @@
     "b_dislike[\"state\"] = DISABLED\n",
     "b_neutral[\"state\"] = DISABLED\n",
     "b_listen[\"state\"] = DISABLED\n",
+    "b_keeprating[\"state\"] = DISABLED\n",
     "b_playlist[\"state\"] = DISABLED\n",
     "b_export_playlist[\"state\"] = DISABLED\n",
     "\n",
@@ -599,15 +628,6 @@
     "    listBox_playlist.heading(col, text=col)\n",
     "\n",
     "mainloop()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#data"
    ]
   },
   {
