remove unused dependencies

--- a/create_tkinter_class.ipynb
+++ b/create_tkinter_class.ipynb
@@ -7,13 +7,13 @@
    "outputs": [],
    "source": [
     "from search_functionality.rocchio_filter import Napster2_Rocchio_Feedback\n",
+    "\n",
     "import tkinter as tk\n",
     "from tkinter.ttk import *\n",
     "from PIL import ImageTk, Image\n",
     "import webbrowser\n",
     "import pandas as pd\n",
     "import os\n",
-    "\n",
     "from tkinter import * \n",
     "import tkinter.messagebox\n",
     "from tkinter import ttk\n",
@@ -24,23 +24,12 @@
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "import spotipy.util as util\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.decomposition import TruncatedSVD\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from collections import defaultdict, Counter\n",
-    "from tqdm import tqdm\n",
-    "from langdetect import detect, DetectorFactory\n",
-    "import multiprocessing\n",
-    "import os\n",
-    "import pickle\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +39,7 @@
     "        Initialize the GUI by creating an object\n",
     "        Global variables can be stored in the init\n",
     "        \"\"\"\n",
+    "        self.liked_tracks = None\n",
     "        self.rff = Napster2_Rocchio_Feedback()\n",
     "        self.track_df = None\n",
     "        self.track_to_rate = None\n",
@@ -330,20 +320,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/cardoni/napster_2/.venv/lib/python3.9/site-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator TruncatedSVD from version 1.0.2 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "/Users/cardoni/napster_2/venv3913/lib/python3.9/site-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator TruncatedSVD from version 1.0.2 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n",
-      "/Users/cardoni/napster_2/.venv/lib/python3.9/site-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator TfidfTransformer from version 1.0.2 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "/Users/cardoni/napster_2/venv3913/lib/python3.9/site-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator TfidfTransformer from version 1.0.2 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n",
-      "/Users/cardoni/napster_2/.venv/lib/python3.9/site-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator TfidfVectorizer from version 1.0.2 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "/Users/cardoni/napster_2/venv3913/lib/python3.9/site-packages/sklearn/base.py:329: UserWarning: Trying to unpickle estimator TfidfVectorizer from version 1.0.2 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n"
      ]
@@ -351,10 +341,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Napster_GUI_Object at 0x14006fb20>"
+       "<__main__.Napster_GUI_Object at 0x7f86d6967430>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +356,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('.venv': venv)",
+   "display_name": "Python 3.9.13 ('venv3913': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -385,7 +375,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "24aa6135a85f73bcaa635dc4154a447346ed5bc5221e646077bc3ffc8f67f0eb"
+    "hash": "0df20829181e44dd98a6a93cb10785e950889c363fb12790a41ecc840703d20d"
    }
   }
  },
