--- a/user_interface/UI.ipynb
+++ b/user_interface/UI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,120 +110,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"['track_name_x', 'artist_name_x'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [48]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m track_df \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_prototype_playlist\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [47]\u001b[0m, in \u001b[0;36mgenerate_prototype_playlist\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m track_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(practice_data_path)\n\u001b[1;32m     17\u001b[0m rel_columns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrack_id\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrack_name_x\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124martist_name_x\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 18\u001b[0m track_df \u001b[38;5;241m=\u001b[39m \u001b[43mtrack_df\u001b[49m\u001b[43m[\u001b[49m\u001b[43mrel_columns\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     19\u001b[0m track_df\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrack_id\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspotify_id\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     20\u001b[0m                         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrack_name_x\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrack_name\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     21\u001b[0m                         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124martist_name_x\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124martist_name\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     22\u001b[0m })\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m track_df\u001b[38;5;241m.\u001b[39msample(\u001b[38;5;241m30\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m15\u001b[39m)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/core/frame.py:3511\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3509\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   3510\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[0;32m-> 3511\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolumns\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m   3513\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   3514\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/core/indexes/base.py:5782\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   5779\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   5780\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 5782\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   5784\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[1;32m   5785\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[1;32m   5786\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/core/indexes/base.py:5845\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   5842\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   5844\u001b[0m not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[0;32m-> 5845\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"['track_name_x', 'artist_name_x'] not in index\""
+     ]
+    }
+   ],
    "source": [
     "track_df = generate_prototype_playlist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>track_id</th>\n",
-       "      <th>track_name_x</th>\n",
-       "      <th>artist_name_x</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6242</th>\n",
-       "      <td>5jzEwSyyymBlf1fa1o39T2</td>\n",
-       "      <td>512</td>\n",
-       "      <td>Mora</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6876</th>\n",
-       "      <td>2SJZdZ5DLtlRosJ2xHJJJa</td>\n",
-       "      <td>Chance</td>\n",
-       "      <td>Paulo Londra</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6089</th>\n",
-       "      <td>0joQFwiBKmi6X1Iq5R1ubH</td>\n",
-       "      <td>Codeine Crazy</td>\n",
-       "      <td>Future</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4545</th>\n",
-       "      <td>6sNBVMxGN6D9t4b9e2fnEN</td>\n",
-       "      <td>Ruta 66</td>\n",
-       "      <td>Pappo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>449</th>\n",
-       "      <td>3bmYpOfK6nLgr4GAtujhB8</td>\n",
-       "      <td>Trenches</td>\n",
-       "      <td>Pop Evil</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    track_id   track_name_x artist_name_x\n",
-       "6242  5jzEwSyyymBlf1fa1o39T2            512          Mora\n",
-       "6876  2SJZdZ5DLtlRosJ2xHJJJa         Chance  Paulo Londra\n",
-       "6089  0joQFwiBKmi6X1Iq5R1ubH  Codeine Crazy        Future\n",
-       "4545  6sNBVMxGN6D9t4b9e2fnEN        Ruta 66         Pappo\n",
-       "449   3bmYpOfK6nLgr4GAtujhB8       Trenches      Pop Evil"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "track_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(30, 3)"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "track_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,6 +304,12 @@
     "    for index, row in track_df.iterrows():\n",
     "        listBox_playlist.insert(\"\", \"end\", values=(row.track_name_x, row.artist_name_x))\n",
     "    \n",
+    "    #Insert liked songs into playlist\n",
+    "    for child in listBox_lyrics.get_children():\n",
+    "        #print(listBox_lyrics.item(child)[\"values\"])\n",
+    "        listBox_playlist.insert(\"\", \"end\", values=(listBox_lyrics.item(child)[\"values\"][0],listBox_lyrics.item(child)[\"values\"][1]))\n",
+    "    \n",
+    "    \n",
     "    b_keeprating[\"state\"] = NORMAL\n",
     "    b_playlist[\"state\"] = DISABLED\n",
     "    b_export_playlist[\"state\"] = NORMAL\n",
@@ -449,24 +385,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Sueña', 'Intocable', 'Dislike']\n",
-      "['Goldberg Variations, BWV 988: Variatio 6 Canone alla Seconda. a 1 Clav.', 'Johann Sebastian Bach', 'Dislike']\n",
-      "['On & On', 'Cartoon', 'Like']\n",
-      "['Sueña', 'Intocable', 'Dislike']\n",
-      "['Goldberg Variations, BWV 988: Variatio 6 Canone alla Seconda. a 1 Clav.', 'Johann Sebastian Bach', 'Dislike']\n",
-      "['On & On', 'Cartoon', 'Like']\n",
-      "['Ruta 66', 'Pappo', 'Dislike']\n",
-      "['Trenches', 'Pop Evil', 'Like']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# global variables\n",
     "# start with random lyric\n",
@@ -632,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
