remove napster references

--- a/search_functionality/development.ipynb
+++ b/search_functionality/development.ipynb
@@ -43,8 +43,8 @@
     "    return a dataframe with cleaned lyrics\n",
     "    \"\"\"\n",
     "    temp_path = os.getcwd()\n",
-    "    root_path = temp_path.split('/napster_2')[0]\n",
-    "    repo_path = '/napster_2/lyric_genius_api/practice_data.csv'\n",
+    "    root_path = temp_path.split('/rocchio_records')[0]\n",
+    "    repo_path = '/rocchio_records/lyric_genius_api/practice_data.csv'\n",
     "    data_path = root_path + repo_path\n",
     "    # step 1 import old lyrical data into a dataframe.\n",
     "    lyric_df = pd.read_csv(data_path)\n",
