--- a/search_functionality/Generate_LSI.ipynb
+++ b/search_functionality/Generate_LSI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "    \"\"\"\n",
     "    temp_path = os.getcwd()\n",
     "    root_path = temp_path.split('/rocchio_records')[0]\n",
-    "    repo_path = '/rocchio_records/lyric_genius_api/practice_data.csv'\n",
+    "    repo_path = '/rocchio_records/lyric_genius_api/practice.csv'\n",
     "    data_path = root_path + repo_path\n",
     "    # step 1 import old lyrical data into a dataframe.\n",
     "    lyric_df = pd.read_csv(data_path)\n",
@@ -68,16 +68,23 @@
     "    df = df[df.language == 'en']\n",
     "    return df\n",
     "\n",
-    "def create_lyric_tfidf(lyric_df, min_df):\n",
+    "\n",
+    "def create_lyric_tfidf(lyric_df, min_df=375):\n",
     "    \"\"\" \n",
     "    Create a tfidf vectorizer for the track lyrics\n",
     "    \"\"\"\n",
-    "    tfidf = TfidfVectorizer(tokenizer=str.split, min_df=min_df)\n",
+    "    # step 1 remove punctuation\n",
+    "    lyric_df['raw_lyrics'] = lyric_df['raw_lyrics'].str.replace('[^\\w\\s]', '', regex=True)\n",
+    "    # step 2 remove digits\n",
+    "    lyric_df['raw_lyrics'] = lyric_df['raw_lyrics'].str.replace('[\\d*]', '', regex=True)\n",
+    "    # step 3 remove oh remove hey and na\n",
+    "    lyric_df['raw_lyrics'] = lyric_df['raw_lyrics'].str.replace('o+h+\\s|na|hey+', '', regex=True)\n",
+    "    tfidf = TfidfVectorizer(tokenizer=str.split, min_df=min_df, lowercase=True, stop_words='english', max_df=0.75)\n",
     "    # fit the TFIDF vectorizer\n",
     "    tfidf.fit(lyric_df['raw_lyrics'])\n",
     "    return tfidf\n",
     "\n",
-    "def lsi_lyrics(lyric_df, tfidf, num_concepts):\n",
+    "def lsi_lyrics(lyric_df, tfidf, num_concepts=50):\n",
     "    \"\"\"\n",
     "    fit an LSI object using the lyrics\n",
     "    \"\"\"\n",
@@ -160,14 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/cardoni/napster_2/venv3913/lib/python3.9/site-packages/sklearn/feature_extraction/text.py:524: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "/Users/cardoni/rocchio_records/venv390/lib/python3.9/site-packages/sklearn/feature_extraction/text.py:524: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
       "  warnings.warn(\n"
      ]
     }
@@ -175,23 +182,37 @@
    "source": [
     "# call the above functions to show how the LSI vector generation works.\n",
     "# load in lyrics dataframe\n",
-    "lyric_df = load_lyrics_data()\n",
+    "lyric_df = pd.read_csv('english_tracks.csv') #load_lyrics_data()\n",
     "# remove non english tracks:\n",
-    "lyric_df = remove_non_english_tracks(lyric_df)\n",
+    "#lyric_df = remove_non_english_tracks(lyric_df)\n",
     "# create a tfidf vectorizer object\n",
-    "tfidf = create_lyric_tfidf(lyric_df, 10)\n",
+    "tfidf = create_lyric_tfidf(lyric_df)\n",
     "# create a latent semantic indexing object\n",
-    "lsiObj = lsi_lyrics(lyric_df, tfidf, 100)\n",
+    "lsiObj = lsi_lyrics(lyric_df, tfidf)\n",
     "# convert the lyrics into content vectors\n",
     "lyric_vecs = create_lyric_vecs(lyric_df, lsiObj, tfidf)\n",
     "# create a dictionary mapping track id to content vector\n",
     "track_vec_dict = create_lyric_dictionary(lyric_df, lyric_vecs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_artist_track_id_df(lyric_df)\n",
+    "\n",
+    "create_lsi_dict_pickle(track_vec_dict)\n",
+    "create_lsi_obj_pickle(lsiObj)\n",
+    "\n",
+    "create_tfidf_obj_pickle(tfidf)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('venv3913': venv)",
+   "display_name": "Python 3.9.0 ('venv390': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -205,12 +226,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "142cec54de06032808667d51f48fd71df2dd8e5dcd426cc91b9eeda45c073813"
+    "hash": "6efe0abe46daf234a780738da58a7704e9c2ad051c1a6bbfbb6efb6660a44a50"
    }
   }
  },
