Similarity score plot and top 10 tracks for each topic

--- a/search_functionality/Generate_LSI.ipynb
+++ b/search_functionality/Generate_LSI.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -182,9 +182,9 @@
    "source": [
     "# call the above functions to show how the LSI vector generation works.\n",
     "# load in lyrics dataframe\n",
-    "lyric_df = pd.read_csv('english_tracks.csv') #load_lyrics_data()\n",
+    "lyric_df = load_lyrics_data()\n",
     "# remove non english tracks:\n",
-    "#lyric_df = remove_non_english_tracks(lyric_df)\n",
+    "lyric_df = remove_non_english_tracks(lyric_df)\n",
     "# create a tfidf vectorizer object\n",
     "tfidf = create_lyric_tfidf(lyric_df)\n",
     "# create a latent semantic indexing object\n",
@@ -193,20 +193,6 @@
     "lyric_vecs = create_lyric_vecs(lyric_df, lsiObj, tfidf)\n",
     "# create a dictionary mapping track id to content vector\n",
     "track_vec_dict = create_lyric_dictionary(lyric_df, lyric_vecs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_artist_track_id_df(lyric_df)\n",
-    "\n",
-    "create_lsi_dict_pickle(track_vec_dict)\n",
-    "create_lsi_obj_pickle(lsiObj)\n",
-    "\n",
-    "create_tfidf_obj_pickle(tfidf)"
    ]
   }
  ],
